# rdbv

./: .gitmodules  Cargo.toml  NOTICE  readme.md
src/: prepdb.rs  rdbv.rs  readdb.rs
ui/: app.slint
