[package]
name = "rdbv"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prep-db"
path = "src/prepdb.rs"

[[bin]]
name = "read-db"
path = "src/readdb.rs"

[[bin]]
name = "rdbv"
path = "src/rdbv.rs"

[dependencies]
rocksdb = "0.24.0"
scopeguard = "1.2.0"
slint = "1.13.1"

[build-dependencies]
slint-build = "1.13.1"
