[package]
name = "rdbv"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prep-db"
path = "src/prepdb.rs"

[[bin]]
name = "read-db"
path = "src/readdb.rs"

[[bin]]
name = "rdbv"
path = "src/rdbv.rs"

[dependencies]
rocksdb = { path="rust-rocksdb" }
scopeguard = "1.2.0"
slint = "1.13.1"
rust-embed = "8.8.0"
formatjson = "0.3.1"
rfd = "0.15.4"

[build-dependencies]
slint-build = "1.13.1"
